fix(evil-winrm): replace pywinrm with pypsrp to fix Access Denied on Windows Server 2025
pywinrm hardcodes the CMD shell WinRM URI for all operations, which is
blocked for non-admin users on Win Server 2025. pypsrp uses the native
PowerShell plugin URI, fixing exec for non-admin WinRM users. Upload and
download now use native PSRP copy/fetch instead of base64 chunking.

Also adds default_factory=dict to ToolResult.data in mcp-common to
prevent crashes when error-path callers omit the data argument.

--- a/tools/evil-winrm/Dockerfile
+++ b/tools/evil-winrm/Dockerfile
@@ -27,8 +27,9 @@ ENV PATH="/app/venv/bin:$PATH"
 COPY packages/mcp-common /app/packages/mcp-common
 RUN pip install --no-cache-dir /app/packages/mcp-common
 
-# Install pywinrm for programmatic WinRM access
-RUN pip install --no-cache-dir pywinrm
+# Install pypsrp for native PowerShell Remoting Protocol support
+# (pywinrm hardcodes CMD shell URI, blocked on Win Server 2025 for non-admins)
+RUN pip install --no-cache-dir pypsrp
 
 # Copy MCP server
 COPY tools/evil-winrm/mcp-server.py /app/mcp-server.py
